fixed text alignment

--- a/css/scss/pages/_portfolio.scss
+++ b/css/scss/pages/_portfolio.scss
@@ -14,8 +14,12 @@ body {
 }
 
 pre {
-    font-family: 'Inter', sans-serif;
-    white-space: wrap;
+    font-family: "Inter",sans-serif;
+    white-space: pre-wrap;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 1px;
+    margin: 14px 0;
 }
 
 main {
